commit index test

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="js/vue.min.js"></script>
     <script src="js/qrious.min.js"></script>
     <link rel="stylesheet" href="css/style.css">
@@ -12,7 +13,7 @@
 <body>
 
     <script>
-        // ...
+
     </script>
 </body>
 
